--- a/style.css
+++ b/style.css
@@ -1,33 +1,45 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-.clearfix{
+
+.clearfix {
     clear: both;
 }
-body{
+
+body {
     color: rgba(255, 255, 255, 0.866);
-    height: 3000vh;
 }
-h1, h2, h3, h4, h5, h6, button{
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+button {
     font-family: 'Ubuntu', sans-serif;
 }
-p{
+
+p {
     font-family: 'Lato', sans-serif;
 }
-img{
+
+img {
     max-width: 100%;
 
 }
-.header{
+
+.header {
     background-image: url(img/headerBG.jpg);
     background-size: cover;
     background-position: center;
     width: 100%;
     height: 99vh;
 }
-.headerBg{
+
+.headerBg {
     background-color: rgba(0, 0, 0, 0.507);
     width: 100%;
     height: 100%;
@@ -36,11 +48,12 @@ img{
     justify-content: center;
 }
 
-.container{
+.container {
     width: 75%;
     margin: auto;
 }
-.navbar{
+
+.navbar {
     background-color: rgba(20, 20, 20, 0.955);
     position: fixed;
     top: 0;
@@ -50,120 +63,141 @@ img{
     animation: karartma 3s linear forwards;
     z-index: 999;
 }
-@keyframes karartma{
-    0%{
+
+@keyframes karartma {
+    0% {
         opacity: 0;
     }
-    100%{
+
+    100% {
         opacity: 1;
     }
 }
-.navbarParent{
+
+.navbarParent {
     width: 100%;
     display: flex;
     justify-content: space-between;
 }
-.logo{
+
+.logo {
     width: 13%;
     display: flex;
     display: inline-block;
     margin: 1rem;
     animation: slide-up-slow 0.5s linear forwards;
 }
-@keyframes infinite-open{
-    0%{
+
+@keyframes infinite-open {
+    0% {
         background: radial-gradient(circle, #17ff00, rgb(0, 0, 0) 150%);
         background-clip: text;
         -webkit-text-fill-color: transparent;
     }
-    100%{
+
+    100% {
         background: radial-gradient(circle, rgba(0, 117, 14, 0.81), #17ff00 80%);
         background-clip: text;
         -webkit-text-fill-color: transparent;
     }
 }
-@keyframes slide-up-slow{
-    0%{
-        transform: translate(-40px,-125px);
+
+@keyframes slide-up-slow {
+    0% {
+        transform: translate(-40px, -125px);
     }
-    100%{
-        transform: translate(0,0);
+
+    100% {
+        transform: translate(0, 0);
     }
 }
-#rath{
+
+#rath {
     text-align: start;
     font-size: 38px;
     font-style: italic;
     padding: 0.1rem;
     animation: infinite-open 1s linear infinite;
 }
-.navbarUl{
+
+.navbarUl {
     width: 85%;
     display: flex;
     justify-content: end;
     align-items: center;
 
 }
-.navbar li{
+
+.navbar li {
     display: inline-block;
     padding: 0 1.1rem 0 1.1rem;
     opacity: 0.7;
     font-size: 16px;
     font-family: 'Lato', sans-serif;
 }
-.navbar li:hover{
+
+.navbar li:hover {
     opacity: 1;
 }
-#iletisim{
-    margin-left:1rem ;
+
+#iletisim {
+    margin-left: 1rem;
     background-color: rgb(0, 149, 255);
     padding: 0.5rem 1.5rem 0.5rem 1.5rem;
     opacity: 1;
     border-radius: 5px;
     font-size: 14px;
 }
-#iletisim:hover{
+
+#iletisim:hover {
     opacity: 0.85;
 }
 
-.headerParent{
+.headerParent {
     margin-top: 5%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.headerContentLeft{
+
+.headerContentLeft {
     width: 60%;
     animation: slide-up 0.8s linear forwards;
 }
-@keyframes slide-up{
-    0%{
-        transform: translate(-200px,-100px);
+
+@keyframes slide-up {
+    0% {
+        transform: translate(-200px, -100px);
         opacity: 0.1;
     }
-    100%{
+
+    100% {
         transform: translate(0, 0);
         opacity: 1;
     }
 }
-.headerContentLeft h1{
+
+.headerContentLeft h1 {
     font-size: 50px;
     opacity: 1;
     color: #fff;
     margin-bottom: 1.5rem;
 }
-.headerContentLeft p{
+
+.headerContentLeft p {
     font-size: 20px;
     margin-bottom: 3rem;
     line-height: 35px;
 }
-.headerBtn{
+
+.headerBtn {
     width: 50%;
     display: flex;
     justify-content: space-between;
-    
+
 }
-.headerBtn button{
+
+.headerBtn button {
     padding: 1.1rem;
     width: 45%;
     border: none;
@@ -171,78 +205,96 @@ img{
     font-weight: bold;
     border-radius: 0.4rem;
 }
-.headerBtn button:hover{
+
+.headerBtn button:hover {
     opacity: 0.8;
     color: rgb(213, 213, 213);
 }
-#headerGreenBtn{
+
+#headerGreenBtn {
     background-color: rgb(28, 185, 28);
 }
-#headerBlueBtn{
+
+#headerBlueBtn {
     background-color: rgb(21, 142, 183);
 }
-.headerContentRight{
+
+.headerContentRight {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 35%;
     position: relative;
 }
-.headerContentRight img{
+
+.headerContentRight img {
     max-width: 50%;
     position: absolute;
 }
-#phone1{
+
+#phone1 {
     left: 20%;
     z-index: 1;
     animation: move-right 1.2s linear forwards;
 }
-@keyframes move-right{
-    0%{
+
+@keyframes move-right {
+    0% {
         transform: translate(300px, -100px);
-        
+
     }
-    20%{
+
+    20% {
         transform: rotate(120deg);
     }
-    80%{
+
+    80% {
         transform: translate(0, 0);
     }
-    100%{
+
+    100% {
         transform: rotate(0);
     }
 }
-#phone2{
+
+#phone2 {
     right: 0;
     animation: move-left 1.2s linear forwards;
 }
-@keyframes move-left{
-    0%{
+
+@keyframes move-left {
+    0% {
         transform: translate(-300px, 100px);
-        
+
     }
-    20%{
+
+    20% {
         transform: rotate(-120deg);
     }
-    80%{
+
+    80% {
         transform: translate(0, 0);
     }
-    100%{
+
+    100% {
         transform: rotate(0);
     }
 }
-.features{
+
+.features {
     width: 100%;
     background-color: rgb(215, 233, 232);
     position: relative;
     z-index: 1;
 }
-.featuresParent{
+
+.featuresParent {
     width: 100%;
     display: flex;
     align-items: center;
 }
-.featuresContent{
+
+.featuresContent {
     padding: 1rem 0.5rem;
     margin: 3rem 0;
     display: flex;
@@ -250,26 +302,32 @@ img{
     flex-direction: column;
     align-items: center;
 }
-.featuresContent h1+p{
+
+.featuresContent h1+p {
     margin: 1.5rem 0;
     text-align: center;
 }
-.featuresParent img{
+
+.featuresParent img {
     padding: 0 !important;
     object-fit: cover;
 }
-.featuresParent img:hover{
+
+.featuresParent img:hover {
     animation: infinite-rotate 1s linear infinite;
 }
-@keyframes infinite-rotate{
-    0%{
+
+@keyframes infinite-rotate {
+    0% {
         transform: rotate(360deg);
     }
-    100%{
+
+    100% {
         transform: rotate(0);
     }
 }
-.FContentTop{
+
+.FContentTop {
     width: 15%;
     display: flex;
     justify-content: center;
@@ -277,57 +335,70 @@ img{
     padding: 0 !important;
     object-fit: cover;
 }
-.FContentBottom{
+
+.FContentBottom {
     text-align: center;
 }
-.FContentBottom h1{
+
+.FContentBottom h1 {
     font-size: 27px;
     color: rgba(0, 0, 0, 0.638);
 }
-.FContentBottom p{
+
+.FContentBottom p {
     color: rgba(0, 0, 0, 0.429);
     line-height: 25px
 }
-.features2Parent{
+
+.features2Parent {
     display: flex;
     justify-content: center;
     margin: 7.5rem 0 0 0;
 }
-.features2ContentLeft{
+
+.features2ContentLeft {
     width: 50%;
     display: flex;
     justify-content: start;
     animation: space-x 4.5s ease-in-out infinite;
     position: relative;
 }
-@keyframes space-x{
-    0%{
+
+@keyframes space-x {
+    0% {
         transform: translateY(50px);
         z-index: 0;
     }
-    20%{
-        transform: rotate(-20deg); 
+
+    20% {
+        transform: rotate(-20deg);
     }
-    35%{
+
+    35% {
         transform: rotate(20deg);
     }
-    50%{
+
+    50% {
         transform: translateY(-400px);
-        
+
     }
-    80%{
+
+    80% {
         transform: rotate(0);
     }
-    100%{
+
+    100% {
         transform: translateY(50px);
         z-index: 0;
     }
 }
-.features2ContentLeft img{
+
+.features2ContentLeft img {
     object-fit: cover;
     max-width: 99%;
 }
-.features2ContentRight{
+
+.features2ContentRight {
     width: 50%;
     display: flex;
     flex-direction: column;
@@ -335,30 +406,36 @@ img{
     justify-content: center;
     margin-left: 1.5rem;
 }
-.features2ContentRight *{
+
+.features2ContentRight * {
     margin: 0.9rem 0;
 }
-.F2h1{
+
+.F2h1 {
     display: flex;
     justify-content: center;
 }
-#F2h1-1{
+
+#F2h1-1 {
     color: rgb(50, 150, 216);
     font-size: 45px;
 }
-#F2h1-2{
+
+#F2h1-2 {
     background-color: rgb(50, 150, 215);
     font-size: 45px;
     color: white;
     padding: 0.1rem 0.7rem;
     border-radius: 2.5px;
 }
-.features2ContentRight p{
+
+.features2ContentRight p {
     color: rgba(0, 0, 0, 0.522);
     line-height: 28px;
     font-size: 15px;
 }
-.features2ContentRight button{
+
+.features2ContentRight button {
     padding: 1rem 3rem;
     background-color: white;
     border: 1px solid rgb(50, 150, 216);
@@ -369,22 +446,26 @@ img{
     transition: all 0.25s linear;
     box-shadow: rgba(0, 0, 0, 0.178) 1px 1px 1px 1px;
 }
-.features2ContentRight button:hover{
+
+.features2ContentRight button:hover {
     background-color: rgb(50, 150, 216);
     color: white;
 }
-.features3{
+
+.features3 {
     z-index: 1;
     position: relative;
 }
-.features3Parent{
+
+.features3Parent {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10rem 0 0 0;
     position: relative;
 }
-.features3ContentLeft{
+
+.features3ContentLeft {
     width: 50%;
     display: flex;
     justify-content: start;
@@ -392,22 +473,26 @@ img{
     align-items: start;
     margin: 0 0 4rem 0;
 }
-.features3ContentLeft h1{
+
+.features3ContentLeft h1 {
     color: rgb(50, 150, 216);
     font-size: 45px;
     margin: 0 0 2rem 0;
 }
-.features3ContentLeft p{
+
+.features3ContentLeft p {
     color: rgba(0, 0, 0, 0.522);
     line-height: 28px;
     font-size: 15px;
     margin: 0 0 2rem 0;
 }
-.bi-check2-square{
+
+.bi-check2-square {
     color: rgb(50, 150, 216);
     font-size: 18px;
 }
-.features3ContentLeft li{
+
+.features3ContentLeft li {
     color: rgba(0, 0, 0, 0.63);
     list-style-type: none;
     font-size: 16px;
@@ -416,25 +501,29 @@ img{
     display: flex;
     gap: 0.7rem;
 }
-.f3-List{
+
+.f3-List {
     display: flex;
     width: 100%;
     justify-content: space-between;
     gap: 6rem;
 }
-.f3Left-List{
+
+.f3Left-List {
     display: flex;
     flex-direction: column;
     justify-content: start;
     align-items: start;
 }
-.f3Right-List{
+
+.f3Right-List {
     display: flex;
     flex-direction: column;
     justify-content: start;
     align-items: start;
 }
-.features3ContentRight{
+
+.features3ContentRight {
     display: flex;
     justify-content: start;
     align-items: center;
@@ -443,33 +532,39 @@ img{
     top: 5rem;
     right: 0;
 }
-.features3ContentRight img{
+
+.features3ContentRight img {
     max-width: 56%;
 }
-#phone3{
+
+#phone3 {
     position: relative;
     z-index: 1;
 }
-#phone4{
+
+#phone4 {
     position: absolute;
     right: 0;
     z-index: 0;
     top: 2.5rem;
 }
-.features4{
+
+.features4 {
     background-color: #34495e;
     width: 100%;
     z-index: 2;
     position: relative;
 }
-.features4Parent{
+
+.features4Parent {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
 }
-.features4Head{
+
+.features4Head {
     width: 70%;
     display: flex;
     flex-direction: column;
@@ -478,16 +573,19 @@ img{
     text-align: center;
     margin: 7rem 0 0 0;
 }
-.features4Head h1{
+
+.features4Head h1 {
     font-size: 40px;
     margin: 0 0 2rem 0;
 }
-.features4Content{
+
+.features4Content {
     display: flex;
     justify-content: space-between;
     width: 100%;
 }
-.features4Icon{
+
+.features4Icon {
     width: 25%;
     display: flex;
     justify-content: start;
@@ -496,55 +594,31 @@ img{
     gap: 2.5rem;
     padding: 4rem 0 7rem 0;
 }
-.features4ContentTop{
+
+.features4ContentTop {
     width: 100%;
     display: flex;
     justify-content: center;
 
 }
-.f4-icon{
+
+.f4-icon {
     background-color: #3498db;
     font-size: 32px;
     padding: 1.2rem 1.5rem;
     text-align: center;
     border-radius: 3px;
 }
-.features4ContentBottom{
+
+.features4ContentBottom {
     width: 100%;
 }
-.features4ContentBottom h4{
+
+.features4ContentBottom h4 {
     text-align: center;
     font-size: 24px;
     line-height: 32px;
     font-weight: 500;
     width: 100%;
-   
+
 }
-.features5{}
-.features5Parent{
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-}
-.features5ContentLeft{
-    background-color: black;
-    width: 30%;
-}
-.features5ContentMiddle{
-    background-color: red;
-    width: 30%;
-}
-.features5ContentRight{
-    width: 30%;
-    background-color: blue;
-}
-.features5ContentMain{}
-.features5 h1{}
-.features5 p{
-    color: rgba(0, 0, 0, 0.522)
-}
-.features5-img{
-    width: 50%;
-}
-.features5 img{}
-.features5 button{}
